@@ -35,6 +35,7 @@ CONFIG += -DUSE_PIP			# PIP support
 #CONFIG += -DNO_TS_AUDIO		# disable ts audio parser
 #CONFIG += -DUSE_TS_VIDEO		# build new ts video parser
 #CONFIG += -DUSE_MPEG_COMPLETE		# support only complete mpeg packets
+#CONFIG += -DH264_EOS_TRICKSPEED	# insert seq end packets for trickspeed
 CONFIG += -DUSE_VDR_SPU			# use VDR SPU decoder.
 #CONFIG += -DUSE_SOFTLIMIT		# (tobe removed) limit the buffer fill
 
