@@ -44,6 +44,7 @@ video:
     crash with ffmpeg without vaapi and vdpau.
     still-picture of PES recordings should use VideoMpegEnqueue.
     convert PIX_FMT_... PixelFormat to new names AV_PIX_FMT_..., AVPixelFormat.
+    atmo service support 3D grab
 
 vdpau:
     software deinterlace path not working.
