@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Add compile time selectable h264 trickspeed workaround.
     Use ffmpeg new names AVCodecID, AV_CODEC_... .
     Fix bug: video lagging behind after recording stop.
     Reduce PES error messages.
